--- a/style1.css
+++ b/style1.css
@@ -1,29 +1,84 @@
+#categories {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+
+
+}
+
+button {
+    width: 120px;
+    margin: 15px;
+}
+
+.bibli {
+    display: flex;
+    flex-direction: row;
+
+}
+
+
+#restaurantList {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+
+
+    background-color: white;
+    align-items: center;
+    list-style: none;
+}
+
+
+
+
+/* 
+.restaurantUl {
+    background-color: rgb(196, 240, 225);
+
+
+    padding: 2rem;
+    margin: 2rem;
+    list-style: none;
+} */
+
+.restaurantUl {
+    background-color: white;
+
+    padding: 1rem;
+
+
+}
+
+
+.restaurantUl li {
+    flex-basis: 32%;
+    background-color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin-bottom: 1rem;
+    background-color: black;
+    border-radius: 5px;
+    padding: 1rem;
+}
+
 body {
     background-color: rgb(30, 29, 29);
     font-family: Arial, Helvetica, sans-serif;
     color: white;
 }
-ul {
-    background: rgb(255, 250, 250);
-    display: flex;
-    justify-content: space-evenly;
-    padding: 10px;
-}
-ul li {
-    list-style: none;
-}
-ul li a {
-    color: rgb(0, 0, 0);
-    text-decoration: none;
-    font-size: 30px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: brown;
-}
+
+
 h1 {
     font-size: 45px;
     color: black;
     font-style: oblique;
 }
+
 .container {
     display: flex;
     flex-direction: column;
@@ -31,10 +86,12 @@ h1 {
     color: white;
     font-style: oblique;
 }
+
 h2 {
     color: white;
     ;
 }
+
 .food {
     background-image: url(src/pictureplat.jpg);
     background-position: center;
