--- a/style1.css
+++ b/style1.css
@@ -3,94 +3,97 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-
-
+    color: white;
 }
 
 button {
-    width: 120px;
-    margin: 15px;
+    display: inline-block;
+    background-color: burlywood;
+    border-radius: 10px;
+    border: 4px double #cccccc;
+    text-align: center;
+    font-size: 20px;
+    padding: 20px;
+    width: 200px;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -o-transition: all 0.5s;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
+    font-style: oblique;
+    
 }
+
+button:hover {
+    background-color: forestgreen;
+  }
 
 .bibli {
     display: flex;
     flex-direction: row;
-
+    
 }
-
 
 #restaurantList {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     flex-wrap: wrap;
-
-
-    background-color: white;
     align-items: center;
     list-style: none;
+    color: white;
 }
 
-
-
-
-/* 
 .restaurantUl {
-    background-color: rgb(196, 240, 225);
-
-
-    padding: 2rem;
-    margin: 2rem;
-    list-style: none;
-} */
-
-.restaurantUl {
-    background-color: white;
-
     padding: 1rem;
-
-
+    color: whitesmoke;
 }
-
 
 .restaurantUl li {
     flex-basis: 32%;
-    background-color: black;
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
     margin-bottom: 1rem;
-    background-color: black;
+    background-color: #7f6a05;
     border-radius: 5px;
     padding: 1rem;
+    color:white;
 }
 
 body {
-    background-color: rgb(30, 29, 29);
+    background-color: bisque;
     font-family: Arial, Helvetica, sans-serif;
-    color: white;
+    background: #000000;
+background: -webkit-linear-gradient(0deg, #000000 0%, #89711d 50%, #7f6a05 100%);
+background: linear-gradient(0deg, #000000 0%, #89711d 50%, #7f6a05 100%);
 }
-
 
 h1 {
-    font-size: 45px;
+    font-size: px;
     color: black;
     font-style: oblique;
-}
+    
+    }
 
-.container {
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-    color: white;
-    font-style: oblique;
+.Titre {
+    text-shadow:0 0 3px #FFE205, 0 0 7px #FFE205, 0 0 20px #EDD205;color:#FFE205;
+    font-size: 100px;
+    background-color: rgba(137,113,29,0.7);
+    background: -o-linear-gradient(#89711d, 0);
+    border-radius: 0 ;
+
 }
 
 h2 {
-    color: white;
-    ;
-}
+    display: flex;
+    color: black;
+    font-size: 35px;
+    justify-content: center;
+    text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
+    }
 
 .food {
     background-image: url(src/pictureplat.jpg);
@@ -101,4 +104,9 @@ h2 {
     text-align: left;
     text-align: center;
     text-size-adjust: auto;
+
 }
+
+a:visited {
+    color: whitesmoke;
+  }
