--- a/style1.css
+++ b/style1.css
@@ -22,6 +22,18 @@ button {
     cursor: pointer;
     margin: 5px;
     font-style: oblique;
+    margin-bottom: 70px;
+    text-shadow:   -1px -1px 0 #000,  
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+     1px 1px 0 #000,
+     1px 1px 2px #141414,
+     1px 1px 3px #141414,
+     1px 1px 5px #141414,
+     1px 1px 7px #141414,
+     1px 1px 10px #141414,
+     1px 1px 12px #141414,
+     1px 1px 18px #141414;color:#fff;
     
 }
 
@@ -42,57 +54,64 @@ button:hover {
     flex-wrap: wrap;
     align-items: center;
     list-style: none;
-    color: white;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 20px;
+    margin-left: 100px;
 }
 
 .restaurantUl {
     padding: 1rem;
     color: whitesmoke;
-}
-
-.restaurantUl li {
-    flex-basis: 32%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    margin-bottom: 1rem;
-    background-color: #7f6a05;
-    border-radius: 5px;
-    padding: 1rem;
-    color:white;
-}
+    list-style: none;
+    text-decoration: none;
+    display: grid; 
+        grid-auto-columns: 100px 100px;
+        grid-template-columns: 125px 125px 125px;
+        grid-template-rows: repeat(3, 100px);
+        gap: 10px; 
+        grid-template-areas: 10px;
+        background-color: goldenrod;
+        border-radius: 10px;
+        align-self: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 20px;
+    
+      }
+      
 
 body {
     background-color: bisque;
     font-family: Arial, Helvetica, sans-serif;
     background: #000000;
-background: -webkit-linear-gradient(0deg, #000000 0%, #89711d 50%, #7f6a05 100%);
-background: linear-gradient(0deg, #000000 0%, #89711d 50%, #7f6a05 100%);
+    background: #000000;
+    background: #000000;
+    background: #000000;
+    background: -webkit-linear-gradient(0deg, #000000 0%, #7a6323 100%);
+    background: linear-gradient(0deg, #000000 0%, #7a6323 100%);
+
 }
 
 h1 {
-    font-size: px;
-    color: black;
     font-style: oblique;
+    border: transparent;
     
     }
 
 .Titre {
-    text-shadow:0 0 3px #FFE205, 0 0 7px #FFE205, 0 0 20px #EDD205;color:#FFE205;
-    font-size: 100px;
-    background-color: rgba(137,113,29,0.7);
-    background: -o-linear-gradient(#89711d, 0);
-    border-radius: 0 ;
-
+    text-shadow:0 0 4px #FF0000,0 0 50px #FF0000,0px 0px 14px #FF0000, 0 0 100px #FF0000, 0 0 150px #FF0000, 0 0 150px #FF0000, 0 0 550px #CA0000, 0 0 250px #CA0000, 0 0 350px #CA0000, 0 0 250px #CA0000;color:#FFD000;
+    font-size: 100px; 
 }
 
 h2 {
     display: flex;
     color: black;
     font-size: 35px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     justify-content: center;
-    text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
+    text-shadow:#800000 2px 2px 0,
+#FF62 4px 4px 0,
+#000000 6px 6px 0.5px,
+#333 8px 11px 10px;color:#FFFEA5;
     }
 
 .food {
@@ -100,13 +119,11 @@ h2 {
     background-position: center;
     background-size: cover;
     padding: 10rem;
-    color: black;
-    text-align: left;
     text-align: center;
-    text-size-adjust: auto;
 
 }
 
 a:visited {
     color: whitesmoke;
+
   }
