--- a/style3.css
+++ b/style3.css
@@ -3,8 +3,6 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-
-
 }
 
 button {
@@ -15,28 +13,23 @@ button {
 .bibli {
     display: flex;
     flex-direction: row;
-
 }
-
 
 #restaurantList {
     display: flex;
-    flex-direction: row;
+    flex-direction: center;
     justify-content: space-around;
     flex-wrap: wrap;
 
 
-    background-color: white;
+    background-color: pink;
     align-items: center;
     list-style: none;
 }
 
-
-
-
-/* 
+/*
 .restaurantUl {
-    background-color: rgb(196, 240, 225);
+    background-color: orange;
 
 
     padding: 2rem;
@@ -45,13 +38,9 @@ button {
 } */
 
 .restaurantUl {
-    background-color: white;
-
+    background-color: hotpink;
     padding: 1rem;
-
-
 }
-
 
 .restaurantUl li {
     flex-basis: 32%;
@@ -61,35 +50,9 @@ button {
     justify-content: center;
     text-align: center;
     margin-bottom: 1rem;
-    background-color: black;
+    background-color: white;
     border-radius: 5px;
     padding: 1rem;
-}
-
-body {
-    background-color: rgb(30, 29, 29);
-    font-family: Arial, Helvetica, sans-serif;
-    color: white;
-}
-
-
-h1 {
-    font-size: 45px;
-    color: black;
-    font-style: oblique;
-}
-
-.container {
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-    color: white;
-    font-style: oblique;
-}
-
-h2 {
-    color: white;
-    ;
 }
 
 .food {
@@ -101,4 +64,27 @@ h2 {
     text-align: left;
     text-align: center;
     text-size-adjust: auto;
+}
+
+body {
+    background-color: lightgoldenrodyellow;
+    font-family: Arial, Helvetica, sans-serif;
+    color: mediumturquoise;
+}
+
+h1 {
+    font-size: 30px;
+    color: black;
+    text-shadow: 4px 3px 0px #fff, 9px 8px 0px rgba(0, 0, 0, 0.15);
+}
+
+h2 {
+    color: black;
+    display: flex;
+    justify-content: center;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+a:visited {
+    color: black;
 }
