css updated img tag and liDetails class on li

--- a/style1.css
+++ b/style1.css
@@ -134,3 +134,15 @@ a:visited {
     color: whitesmoke;
 
 }
+
+img {
+    width: 200px;
+    height: 200px;
+}
+
+.liDetails {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: nowrap;
+}
