--- a/style1.css
+++ b/style1.css
@@ -61,7 +61,9 @@ button:hover {
     list-style: none;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 20px;
-    margin-left: 100px;
+    gap: 75px;
+    margin-bottom: 75px;
+
 }
 
 .restaurantUl {
@@ -73,13 +75,13 @@ button:hover {
     grid-auto-columns: 100px 100px;
     grid-template-columns: 125px 125px 125px;
     grid-template-rows: repeat(3, 100px);
-    gap: 10px;
     grid-template-areas: 10px;
     background-color: goldenrod;
     border-radius: 10px;
     align-self: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 20px;
+    padding: 0px;
 
 }
 
@@ -122,7 +124,7 @@ h2 {
 }
 
 .food {
-    background-image: url(src/pictureplat.jpg);
+    background-image: url(src/pictureplatbis.jpg);
     background-position: center;
     background-size: cover;
     padding: 10rem;
@@ -131,6 +133,12 @@ h2 {
 }
 
 a:visited {
-    color: whitesmoke;
+    color: black;
 
+}
+
+img {
+    width: 375px;
+    height: 300px;
+    border-radius: 10px;
 }
