--- a/style1.css
+++ b/style1.css
@@ -142,3 +142,17 @@ img {
     height: 300px;
     border-radius: 10px;
 }
+
+.restaurant-details {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: #7a6323;
+
+}
+
+.restaurant-title {}
