--- a/style1.css
+++ b/style1.css
@@ -151,7 +151,8 @@ img {
     text-align: center;
     font-size: 20px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background-color: #7a6323;
+    background-color: #2cf40d;
+    width: 250px;
 
 }
 
