--- a/style1.css
+++ b/style1.css
@@ -80,7 +80,7 @@ button:hover {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 20px;
     gap: 75px;
-    margin-bottom: 75px;
+    margin: auto;
 
 }
 
